fixed overflow

--- a/style.css
+++ b/style.css
@@ -183,15 +183,17 @@ body {
 
 .firstVideo {
   position: relative;
+  overflow: hidden;
   width: 100%;
-  padding-bottom: 56.25%;
-  height: 0;
+  padding-top: 56.25%;
 }
 
 .firstVideo iframe {
   position:absolute;
   top: 0;
   left: 0;
+  bottom: 0;
+  right: 0;
   width: 100%;
   height: 100%;
 }
